--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- Top section for website-->
         <div class="top">
             <div class="header">
                 <div class="headerLogo">
@@ -28,12 +29,37 @@
                     </p>
                     <button class="mainSignUp">Sign up</button>
                 </div>
-                <div>
-                    <h2>text</h2>
+                <div class="placeHolderImg1">
+                    <h2>place holder for image</h2>
                 </div>
-                <img>
             </div>  
         </div>
+
+        <!-- Body for images and random information-->
+        <div class="bodyInfo">
+            <div class="randInfo">
+                <h1>Some random Information</h1>
+            </div>
+            <div class="fourImageContainer">
+                <div class="info">
+                    <img>
+                    <div class="imgInfo">this is some subtext under and illustration image</div>
+                </div>
+                <div class="info">
+                    <img>
+                    <div class="imgInfo">this is some subtext under and illustration image</div>
+                </div>
+                <div class="info">
+                    <img>
+                    <div class="imgInfo">this is some subtext under and illustration image</div>
+                </div>
+                <div class="info">
+                    <img>
+                    <div class="imgInfo">this is some subtext under and illustration image</div>
+                </div>
+            </div>
+        </div>
+
     </body>
 
 
