Updated landing page up until quotes

--- a/index.html
+++ b/index.html
@@ -42,24 +42,35 @@
             </div>
             <div class="fourImageContainer">
                 <div class="info">
-                    <img>
+                    <img src="./images/brown_square.png" alt="brown_square">
                     <div class="imgInfo">this is some subtext under and illustration image</div>
                 </div>
                 <div class="info">
-                    <img>
+                    <img src="./images/brown_square.png" alt="brown_square">
                     <div class="imgInfo">this is some subtext under and illustration image</div>
                 </div>
                 <div class="info">
-                    <img>
+                    <img src="./images/brown_square.png" alt="brown_square">
                     <div class="imgInfo">this is some subtext under and illustration image</div>
                 </div>
                 <div class="info">
-                    <img>
+                    <img src="./images/brown_square.png" alt="brown_square">
                     <div class="imgInfo">this is some subtext under and illustration image</div>
                 </div>
             </div>
         </div>
-
+        
+        <!-- Quote Section  -->
+        <div class="QuoteSection">
+            <div class="QuoteContainer">
+                <p class="Quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe 
+                    it's just filling up space, or maybe people will actually read it. Who knows? All I know
+                    is that it looks nice.
+                </p>
+                <p class="QuoteSpeaker">-Thor, God of Thunder</p>
+            </div>
+        </div>
     </body>
 
 
