Complete draft of landing page. Completed but room for imrpovement in the future.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                 <p class="QuoteSpeaker">-Thor, God of Thunder</p>
             </div>
         </div>
+
+        <!-- Call To Action Button -->
+        <div class="CTAsection">
+            <div class="CTAcontainer">
+                <div class="CTAtext">
+                    <p class="Inquire">Call to Action! It's Time!</p>
+                    <p class="CTAinstruction">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="CTASignUp">Sign up</button>
+            </div>
+        </div>
     </body>
 
 
